# book_2

./: API_KEY_SECURITY_REVIEW.md  INGESTION_IMPLEMENTATION_SUMMARY.md  requirements.txt  test_ingestion.py  vercel.json
backend/: Dockerfile  EMBEDDING_PIPELINE_README.md  INGESTION_README.md  README.md  app.py  book_ingester.py  main.py  pyproject.toml  requirements.txt  run_embedding_pipeline.py  run_local_embedding_pipeline.py  simple_ingest.py  test_api.py  test_qdrant_connection.py  test_qdrant_updated.py  upload_to_qdrant.py  upload_to_qdrant_direct.py  use_embeddings.py  verify_qdrant_upload.py  verify_qdrant_upload_env.py
backend/config/: settings.py
backend/embeddings/: embeddings.index  metadata_20251228_151024.json
backend/src/: main.py
backend/src/api/: ask.py  chat.py  learning_materials.py  learning_module_routes.py  routers.py  textbook_routes.py  user.py  user_routes.py
backend/src/auth/: authentication.py  utils.py
backend/src/config/: qdrant_config.py  settings.py
backend/src/database/: session.py
backend/src/debug/: analyze_context_flow.py
backend/src/embedding_pipeline/: config.py  vector_store.py
backend/src/models/: chapter.py  chat_response.py  content_version.py  learning_materials.py  textbook_models.py  translation_cache.py  user_profile.py  user_progress.py
backend/src/services/: book_service.py  chapter_service.py  chat_service.py  db_service.py  embedding_service.py  learning_materials_service.py  llm_service.py  personalization_service.py  progress_service.py  qdrant_service.py  (+4 more)
backend/test_env/: pyvenv.cfg
(+28 files in other folders)
